# api-docs.yaml
@@ -24,36 +24,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Famille_Product'
-  /api/workshops/{idWorkshop}:
-    get:
-      tags:
-      - workshop-controller
-      operationId: getWorkshopById
-      parameters:
-      - name: idWorkshop
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/WorkshopResponseDTO'
+  /api/workshops/{id}:
     put:
       tags:
       - workshop-controller
-      operationId: updateWorkshop
-      parameters:
-      - name: idWorkshop
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
+      operationId: updateClient
       requestBody:
         content:
           application/json:
@@ -67,20 +42,6 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/WorkshopResponseDTO'
-    delete:
-      tags:
-      - workshop-controller
-      operationId: deleteWorkshop
-      parameters:
-      - name: idWorkshop
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: OK
   /api/users/{id}:
     get:
       tags:
@@ -161,13 +122,6 @@ paths:
       tags:
       - sub-category-controller
       operationId: updateSubCategory
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
       requestBody:
         content:
           application/json:
@@ -195,36 +149,11 @@ paths:
       responses:
         "200":
           description: OK
-  /api/raw-materials/{idMaterial}:
-    get:
-      tags:
-      - raw-material-controller
-      operationId: getRawMaterialById
-      parameters:
-      - name: idMaterial
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/RawMaterialResponseDTO'
+  /api/raw-materials/{id}:
     put:
       tags:
       - raw-material-controller
       operationId: updateRawMaterial
-      parameters:
-      - name: idMaterial
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
       requestBody:
         content:
           application/json:
@@ -238,20 +167,6 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/RawMaterialResponseDTO'
-    delete:
-      tags:
-      - raw-material-controller
-      operationId: deleteRawMaterial
-      parameters:
-      - name: idMaterial
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: OK
   /api/products/{id}:
     get:
       tags:
@@ -420,7 +335,7 @@ paths:
     put:
       tags:
       - client-controller
-      operationId: updateClient
+      operationId: updateClient_1
       requestBody:
         content:
           application/json:
@@ -525,12 +440,12 @@ paths:
       tags:
       - raw-material-controller
       operationId: createRawMaterial
-      parameters:
-      - name: rawMaterialRequestDTO
-        in: query
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RawMaterialRequestDTO'
         required: true
-        schema:
-          $ref: '#/components/schemas/RawMaterialRequestDTO'
       responses:
         "200":
           description: OK
@@ -707,6 +622,57 @@ paths:
       tags:
       - workshop-controller
       operationId: getAllWorkshops
+      parameters:
+      - name: pageable
+        in: query
+        required: true
+        schema:
+          $ref: '#/components/schemas/Pageable'
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/PageWorkshopResponseDTO'
+  /api/workshops/{idWorkshop}:
+    get:
+      tags:
+      - workshop-controller
+      operationId: getWorkshopById
+      parameters:
+      - name: idWorkshop
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/WorkshopResponseDTO'
+    delete:
+      tags:
+      - workshop-controller
+      operationId: deleteWorkshop
+      parameters:
+      - name: idWorkshop
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+  /api/workshops/showAll:
+    get:
+      tags:
+      - workshop-controller
+      operationId: getAllWorkshops_1
       responses:
         "200":
           description: OK
@@ -734,6 +700,24 @@ paths:
     get:
       tags:
       - sub-category-controller
+      operationId: getSubCategories
+      parameters:
+      - name: pageable
+        in: query
+        required: true
+        schema:
+          $ref: '#/components/schemas/Pageable'
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/PageSubCategoryResponseDTO'
+  /api/subcategories/showAll:
+    get:
+      tags:
+      - sub-category-controller
       operationId: getAllSubCategories
       responses:
         "200":
@@ -749,6 +733,57 @@ paths:
       tags:
       - raw-material-controller
       operationId: getAllRawMaterials
+      parameters:
+      - name: pageable
+        in: query
+        required: true
+        schema:
+          $ref: '#/components/schemas/Pageable'
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/PageRawMaterialResponseDTO'
+  /api/raw-materials/{idMaterial}:
+    get:
+      tags:
+      - raw-material-controller
+      operationId: getRawMaterialById
+      parameters:
+      - name: idMaterial
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/RawMaterialResponseDTO'
+    delete:
+      tags:
+      - raw-material-controller
+      operationId: deleteRawMaterial
+      parameters:
+      - name: idMaterial
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+  /api/raw-materials/showAll:
+    get:
+      tags:
+      - raw-material-controller
+      operationId: getAllRawMaterials_1
       responses:
         "200":
           description: OK
@@ -894,7 +929,7 @@ paths:
     get:
       tags:
       - client-controller
-      operationId: getClients
+      operationId: getAllClients
       parameters:
       - name: pageable
         in: query
@@ -912,7 +947,7 @@ paths:
     get:
       tags:
       - client-controller
-      operationId: getAllClients
+      operationId: getAllClients_1
       responses:
         "200":
           description: OK
@@ -962,6 +997,9 @@ components:
     WorkshopRequestDTO:
       type: object
       properties:
+        idWorkshop:
+          type: integer
+          format: int64
         workshopNumber:
           type: integer
           format: int32
@@ -1047,6 +1085,9 @@ components:
     SubCategoryRequestDTO:
       type: object
       properties:
+        idSubCategory:
+          type: integer
+          format: int64
         name:
           type: string
         reference:
@@ -1064,6 +1105,9 @@ components:
     RawMaterialRequestDTO:
       type: object
       properties:
+        idMaterial:
+          type: integer
+          format: int64
         name:
           type: string
         materialType:
@@ -1601,26 +1645,22 @@ components:
           type: array
           items:
             type: string
-    PageProductResponse:
+    PageWorkshopResponseDTO:
       type: object
       properties:
-        totalElements:
-          type: integer
-          format: int64
         totalPages:
           type: integer
           format: int32
-        first:
-          type: boolean
-        last:
-          type: boolean
+        totalElements:
+          type: integer
+          format: int64
         size:
           type: integer
           format: int32
         content:
           type: array
           items:
-            $ref: '#/components/schemas/ProductResponse'
+            $ref: '#/components/schemas/WorkshopResponseDTO'
         number:
           type: integer
           format: int32
@@ -1631,6 +1671,10 @@ components:
         numberOfElements:
           type: integer
           format: int32
+        first:
+          type: boolean
+        last:
+          type: boolean
         pageable:
           $ref: '#/components/schemas/PageableObject'
         empty:
@@ -1649,10 +1693,10 @@ components:
           type: boolean
         paged:
           type: boolean
-        pageSize:
+        pageNumber:
           type: integer
           format: int32
-        pageNumber:
+        pageSize:
           type: integer
           format: int32
     SortObject:
@@ -1668,19 +1712,117 @@ components:
           type: string
         ignoreCase:
           type: boolean
-    PageClientResponseDTO:
+    PageSubCategoryResponseDTO:
       type: object
       properties:
+        totalPages:
+          type: integer
+          format: int32
         totalElements:
           type: integer
           format: int64
-        totalPages:
+        size:
+          type: integer
+          format: int32
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/SubCategoryResponseDTO'
+        number:
+          type: integer
+          format: int32
+        sort:
+          type: array
+          items:
+            $ref: '#/components/schemas/SortObject'
+        numberOfElements:
           type: integer
           format: int32
         first:
           type: boolean
         last:
           type: boolean
+        pageable:
+          $ref: '#/components/schemas/PageableObject'
+        empty:
+          type: boolean
+    PageRawMaterialResponseDTO:
+      type: object
+      properties:
+        totalPages:
+          type: integer
+          format: int32
+        totalElements:
+          type: integer
+          format: int64
+        size:
+          type: integer
+          format: int32
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/RawMaterialResponseDTO'
+        number:
+          type: integer
+          format: int32
+        sort:
+          type: array
+          items:
+            $ref: '#/components/schemas/SortObject'
+        numberOfElements:
+          type: integer
+          format: int32
+        first:
+          type: boolean
+        last:
+          type: boolean
+        pageable:
+          $ref: '#/components/schemas/PageableObject'
+        empty:
+          type: boolean
+    PageProductResponse:
+      type: object
+      properties:
+        totalPages:
+          type: integer
+          format: int32
+        totalElements:
+          type: integer
+          format: int64
+        size:
+          type: integer
+          format: int32
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProductResponse'
+        number:
+          type: integer
+          format: int32
+        sort:
+          type: array
+          items:
+            $ref: '#/components/schemas/SortObject'
+        numberOfElements:
+          type: integer
+          format: int32
+        first:
+          type: boolean
+        last:
+          type: boolean
+        pageable:
+          $ref: '#/components/schemas/PageableObject'
+        empty:
+          type: boolean
+    PageClientResponseDTO:
+      type: object
+      properties:
+        totalPages:
+          type: integer
+          format: int32
+        totalElements:
+          type: integer
+          format: int64
         size:
           type: integer
           format: int32
@@ -1698,6 +1840,10 @@ components:
         numberOfElements:
           type: integer
           format: int32
+        first:
+          type: boolean
+        last:
+          type: boolean
         pageable:
           $ref: '#/components/schemas/PageableObject'
         empty:
