# src/network/openapi/models/PageClientResponseDTO.ts
@@ -43,25 +43,13 @@ export interface PageClientResponseDTO {
      * @type {number}
      * @memberof PageClientResponseDTO
      */
-    totalElements?: number;
+    totalPages?: number;
     /**
      * 
      * @type {number}
      * @memberof PageClientResponseDTO
      */
-    totalPages?: number;
-    /**
-     * 
-     * @type {boolean}
-     * @memberof PageClientResponseDTO
-     */
-    first?: boolean;
-    /**
-     * 
-     * @type {boolean}
-     * @memberof PageClientResponseDTO
-     */
-    last?: boolean;
+    totalElements?: number;
     /**
      * 
      * @type {number}
@@ -85,13 +73,25 @@ export interface PageClientResponseDTO {
      * @type {Array<SortObject>}
      * @memberof PageClientResponseDTO
      */
-    sort?: SortObject;
+    sort?: Array<SortObject>;
     /**
      * 
      * @type {number}
      * @memberof PageClientResponseDTO
      */
     numberOfElements?: number;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof PageClientResponseDTO
+     */
+    first?: boolean;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof PageClientResponseDTO
+     */
+    last?: boolean;
     /**
      * 
      * @type {PageableObject}
@@ -123,15 +123,18 @@ export function PageClientResponseDTOFromJSONTyped(json: any, ignoreDiscriminato
     }
     return {
         
-        'totalElements': json['totalElements'] == null ? undefined : json['totalElements'],
         'totalPages': json['totalPages'] == null ? undefined : json['totalPages'],
-        'first': json['first'] == null ? undefined : json['first'],
-        'last': json['last'] == null ? undefined : json['last'],
+        'totalElements': json['totalElements'] == null ? undefined : json['totalElements'],
         'size': json['size'] == null ? undefined : json['size'],
         'content': json['content'] == null ? undefined : ((json['content'] as Array<any>).map(ClientResponseDTOFromJSON)),
         'number': json['number'] == null ? undefined : json['number'],
-        'sort': json['sort'] == null ? undefined : SortObjectFromJSON(json['sort']),
-        'numberOfElements': json['numberOfElements'] == null ? undefined : json['numberOfElements'],
+'sort': Array.isArray(json['sort']) 
+            ? json['sort'].map(SortObjectFromJSON) 
+            : json['sort'] != null && typeof json['sort'] === 'object'
+                ? [SortObjectFromJSON(json['sort'])] // Wrap the object in an array
+                : [],        'numberOfElements': json['numberOfElements'] == null ? undefined : json['numberOfElements'],
+        'first': json['first'] == null ? undefined : json['first'],
+        'last': json['last'] == null ? undefined : json['last'],
         'pageable': json['pageable'] == null ? undefined : PageableObjectFromJSON(json['pageable']),
         'empty': json['empty'] == null ? undefined : json['empty'],
     };
@@ -143,15 +146,15 @@ export function PageClientResponseDTOToJSON(value?: PageClientResponseDTO | null
     }
     return {
         
-        'totalElements': value['totalElements'],
         'totalPages': value['totalPages'],
-        'first': value['first'],
-        'last': value['last'],
+        'totalElements': value['totalElements'],
         'size': value['size'],
         'content': value['content'] == null ? undefined : ((value['content'] as Array<any>).map(ClientResponseDTOToJSON)),
         'number': value['number'],
-        'sort': value['sort'] == null ? undefined : SortObjectToJSON(value['sort']),
+        'sort': value['sort'] == null ? undefined : ((value['sort'] as Array<any>).map(SortObjectToJSON)),
         'numberOfElements': value['numberOfElements'],
+        'first': value['first'],
+        'last': value['last'],
         'pageable': PageableObjectToJSON(value['pageable']),
         'empty': value['empty'],
     };
