# src/network/openapi/models/index.ts
@@ -14,6 +14,9 @@ export * from './OrderRequestDTO';
 export * from './OrderResponseDTO';
 export * from './PageClientResponseDTO';
 export * from './PageProductResponse';
+export * from './PageRawMaterialResponseDTO';
+export * from './PageSubCategoryResponseDTO';
+export * from './PageWorkshopResponseDTO';
 export * from './Pageable';
 export * from './PageableObject';
 export * from './Product';
